# IT-Geo-Paleochannel

./: .gitignore  README.md  dev_rules.md  export_sam_to_onnx.py  pyproject.toml
augmentation/: dataset.py  tests.py  train_example.py
augmentation/augmentation_tests/: augmentations.py  pipeline.py  utils.py
augmentation/dataset_tests/: dataset_visualisation.py
data_in/train/images/: 10_0.npy  10_1.npy  12_0.npy  12_1.npy  12_2.npy  12_3.npy  12_4.npy  12_5.npy  12_6.npy  16_0.npy  21_0.npy  21_1.npy  21_2.npy  21_3.npy  25_0.npy  26_0.npy  27_0.npy  36_0.npy  36_1.npy  38_2.npy  39_0.npy  39_1.npy  41_0.npy  41_1.npy  41_2.npy  41_3.npy  41_4.npy  43_0.npy  43_2.npy  44_0.npy  44_1.npy  44_2.npy  44_3.npy  44_4.npy  44_5.npy  47_0.npy  47_1.npy  47_2.npy  47_3.npy  47_4.npy  (+79 more)
data_in/train/masks/: 10_0.npy  10_1.npy  12_0.npy  12_1.npy  12_2.npy  12_4.npy  12_5.npy  16_0.npy  21_0.npy  21_1.npy  21_2.npy  21_3.npy  25_0.npy  26_0.npy  27_0.npy  36_0.npy  36_1.npy  38_2.npy  39_0.npy  39_1.npy  41_0.npy  41_1.npy  41_2.npy  41_3.npy  41_4.npy  43_0.npy  43_2.npy  44_0.npy  44_1.npy  44_2.npy  44_3.npy  44_4.npy  44_5.npy  47_0.npy  47_1.npy  47_2.npy  47_3.npy  47_4.npy  47_5.npy  48_0.npy  (+72 more)
metrics/: SEM_1024_paleorusels_vessels.csv  SEM_1024_paleorusels_vessels_slice.csv
notebooks/: add_padding.ipynb  del_white.ipynb  domain_shift.ipynb  domain_shift_ResNet.ipynb  domain_shift_ResNet_FDA.ipynb  domain_shift_SAM.ipynb  evaluate_models.ipynb  jpg_to_npy.ipynb  mertics_after_lin_adoptation_ResNet.txt  mertics_after_lin_adoptation_SAM.txt  mertics_under_lin_adoptation_ResNet.txt  notebooks.md  tune_SAM.ipynb  tune_SAM_CORAL.ipynb
reports/sam_eval/: per_sample_metrics.csv  stats_base_vs_tuned_wilcoxon_holm.csv  summary_mean_std.csv
requirements/: requirements_Ilia_K.txt  requirements_ilya_d.txt
src/: dataset.py  export_sam_to_onnx.py  inference_sam_onnx.py  src.md
tests/: cudNN_test.py  run_one_sam_onnx.py  tests.md
(+1 files in other folders)
