[project]
name = "it-geo-paleochannel"
version = "0.1.0"
description = ""
authors = [
    {name = "ilyzthe",email = "ilyzthe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "torch (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
research = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
